Update style.css to fix hover on tab for visibility

--- a/css/style.css
+++ b/css/style.css
@@ -4924,8 +4924,8 @@ tbody.collapse.in {
 }
 
 .navbar-default .navbar-nav>li>a:hover,.navbar-default .navbar-nav>li>a:focus {
-    color: #e7e7e7;
-    background-color: transparent
+    color: #555;
+    background-color: #e7e7e7
 }
 
 .navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus {
